--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,38 @@
+beautifulsoup4==4.10.0
+bs4==0.0.1
+cachelib==0.6.0
+certifi==2021.10.8
+charset-normalizer==2.0.7
 click==8.1.2
 colorama==0.4.4
 Flask==2.1.1
+Flask-Session==0.4.0
+Flask-SQLAlchemy==2.5.1
+future==0.18.2
+greenlet==1.1.2
 gunicorn==20.1.0
+html5lib==1.1
+idna==3.3
 importlib-metadata==4.11.3
 itsdangerous==2.1.2
 Jinja2==3.1.1
+lxml==4.6.3
 MarkupSafe==2.1.1
+numpy==1.21.2
+opencv-python==4.5.3.56
+pafy==0.5.5
+psycopg2-binary==2.9.3
+pyarmor==7.4.1
+pydub==0.25.1
+python-dotenv==0.20.0
+python-vlc==3.0.12118
+pytube==11.0.1
+requests==2.26.0
+six==1.16.0
+soupsieve==2.3.1
+SQLAlchemy==1.4.35
+urllib3==1.26.7
+webencodings==0.5.1
 Werkzeug==2.1.1
+youtube-dl==2021.6.6
 zipp==3.8.0
